better nav bar on mobile, fixes #5

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,30 +1,4 @@
 
-.nav-items {
-  list-style-type: none;
-  margin: 0;
-}
-.nav-item {
-  float: left;
-}
-.nav-item a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.nav-item a:hover {
-  background-color: #222;
-  color: #fff;
-}
-.nav-items img {
-  float: left;
-  margin: 20px;
-}
-.nav-items img:hover {
-  
-}
-
 .img-logo {
 	width: 50%;
 	display: block;
